the-project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-project
  template:
    metadata:
      labels:
        app: the-project
    spec:
      containers:
        - name: the-project
          image: akiracry/the-project:1.4
