the-project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project
spec:
  type: NodePort
  selector:
    app: the-project
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
